# PKLX

./: .gitignore  README.md  grammar.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  tests.py
data/: file1.txt
pplx/: manage.py  objects.py  parser.py  settings.json  settings.py  tests.py
pplx/data/: .ontology  file1.txt
pplx/visx/: backend.py
pplx/visx/static/: visualisation.js
pplx/visx/templates/: index.html
src/pplx/: manage.py  objects.py  parser.py  settings.json  tests.py
