[metadata]
name = "pklx"
version = "0.0.1"
author = "PhylomatX"
author_email = "phylomatx@gmail.com"
description = "The Popper Knowledge Language."
long_description = file: README.md
long_description_content_type = text/markdown
requires-python = ">=3.7"
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
zip_safe = True
install_requires =
    networkx
    flask
    typing
    argparse

[options.package_data]
* = *.png, *.html, *.css, *.js, *.ico, *.webmanifest, *.json

[options.entry_points]
console_scripts = 
    pklx-view = pklx.manage:cmd_view
    pklx-collect = pklx.manage:cmd_collect
    pklx-set-settings = pklx.manage:cmd_set_settings
